# ZaawansowaneProgramowanieOOP-CPP-Studia-

./: .gitignore
99707_lab2/: Bufor.cpp  Bufor.h  CMakeLists.txt  Circle.cpp  Circle.h  Developer.cpp  Developer.h  Employee.cpp  Employee.h  Figure.h  Square.cpp  Square.h  TeamLeader.cpp  main.cpp  maxBufor.cpp  meanBufor.h
HubertSzelepustaKolokwium/: CMakeLists.txt  FunktorStudenta.h  Student.h  main.cpp  subject.cpp  subject.h
HubertSzelepusta_Lab2/: Bufor.cpp  Bufor.h  CMakeLists.txt  Circle.cpp  Circle.h  Developer.cpp  Developer.h  Employee.cpp  Employee.h  Figure.cpp  Figure.h  Square.cpp  Square.h  TeamLeader.cpp  TeamLeader.h  main.cpp  maxBufor.cpp  maxBufor.h  meanBufor.cpp  meanBufor.h
doKolosa/: Adding.h  CMakeLists.txt  Child.cpp  Child.h  Circle.cpp  Circle.h  Compare.cpp  Compare.h  Even.cpp  Even.h  Figure.cpp  Figure.h  Operation.h  Parent.cpp  Parent.h  Person.cpp  Person.h  Print.h  Square.cpp  Square.h  Student.cpp  Student.h  main.cpp
lab12_99707/: CMakeLists.txt  Car.cpp  Car.h  main.cpp
lab13_99707/: CMakeLists.txt
lab3/: Adding.h  Array.h  CMakeLists.txt  Student.h  main.cpp
lab5/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  main.cpp
lab6/: CMakeLists.txt  Person.h  main.cpp
lab_4/: Address.cpp  Address.h  CMakeLists.txt  Citizen.cpp  Citizen.h  City.cpp  City.h  Compare.cpp  Compare.h  CompareByNumberCitizens.cpp  CompareByNumberCitizens.h  CompareByNumberDigits.cpp  CompareByNumberDigits.h  CompareBySumDigits.cpp  CompareBySumDigits.h  Even.cpp  Even.h  Student.cpp  Student.h  main.cpp
lab_6/: CMakeLists.txt  Contact.cpp  Contact.h  Contacts.cpp  Contacts.h  Operation.cpp  Person.cpp  Print.cpp  main.cpp
lab_8/: CMakeLists.txt  Comparator.cpp  Comparator.h  Student.cpp  Student.h  main.cpp
labek1/: Animal.cpp  Animal.h  CMakeLists.txt  Cat.cpp  Cat.h  Dog.cpp  Dog.h  Person.cpp  Person.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
zad2/: Address.cpp  Address.h  CMakeLists.txt  Citizen.cpp  Citizen.h  City.cpp  City.h  main.cpp
