cmake_minimum_required(VERSION 3.29)
project(99707_lab2)

set(CMAKE_CXX_STANDARD 20)

add_executable(99707_lab2 main.cpp
        Bufor.cpp
        Bufor.h
        Circle.cpp
        Circle.h
        Developer.cpp
        Developer.h
        Employee.cpp
        Employee.h
        Figure.cpp
        Figure.h
        maxBufor.cpp
        maxBufor.h
        meanBufor.cpp
        meanBufor.h
        Square.cpp
        Square.h
        TeamLeader.cpp
        TeamLeader.h)
